force-app/main/default/objects/cgcloud__Sell_Sheet__c/cgcloud__Sell_Sheet__c.object-meta.xml
<CustomObject>
    <description>This object contains the attributes associated with the sell sheet to be used on the sales folder.</description>
    <label>Sell Sheet</label>
    <nameField>
        <label>Sell Sheet Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sell Sheets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>