force-app/main/default/objects/cgcloud__Sell_Sheet__c/fields/cgcloud__Note__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Note__c</fullName>
    <description>General note about the sell sheet.</description>
    <label>Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>