force-app/main/default/objects/cgcloud__Sell_Sheet__c/listViews/cgcloud__All.listView-meta.xml
<ListView>
    <fullName>cgcloud__All</fullName>
    <columns>NAME</columns>
    <columns>cgcloud__Description__c</columns>
    <columns>cgcloud__Active__c</columns>
    <columns>cgcloud__Sales_Org__c</columns>
    <columns>cgcloud__Note__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>